# rust-ml-server-example

./: Cargo.toml  gbdt.model  input.csv  test.csv
src/: Untitled.ipynb  main.rs
