[package]
name = "hello-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gbdt = "0.1"
axum = "0.6"
tokio = { version = "1.25.0", features = ["macros", "rt-multi-thread"] }
serde_json = "1.0"
once_cell = "1.17"
serde = { version = "1.0", features = ["derive"] }